web view cropping issue again

--- a/src/Containers/Footer/Footer.scss
+++ b/src/Containers/Footer/Footer.scss
@@ -4,6 +4,7 @@
   margin-left: 50%;
   position: fixed;
   left: 0;
+  top: calc(100vh - 60px);
   width: 100%;
   height: 60px;
   text-align: center;
